--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 <section id="main">
 	<div class="container">
-		Testimonials
+		<h1>Testimonials</h1>
 	</div>
 	<div class="testimonial-1">
 		<p class="testimonial-text">This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
